# cplusplus-neural-network-course

./: CMakeLists.txt  README.md
src/: main.cpp  matrix.cpp  matrix.h  matrixfunctions.cpp  matrixfunctions.h  neuralnetwork.cpp  neuralnetwork.h  testneuralnetwork.cpp  testneuralnetwork.h  vector.cpp  vector.h
